- drawing input feedback to canvas

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css"/>
   <title>Ideal Waddle</title>
 </head>
 <body>
-  kuch kariye 4
+  <div id="beauty">
+    <form name="signature">
+      <label>Name here to create a fantastic ass signature:</label>
+      <input name='name' placeholder="I am neu-d" />
+    </form>
+
+    <canvas></canvas>
+  </div>
   <script src='index.js'></script>
 </body>
 </html>
