- font resize - download canvas text as png

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </form>
 
     <canvas></canvas>
+    <button onclick="convertToImage()">Download</button>
   </div>
   <script src='index.js'></script>
 </body>
