- added neumorphic dropdown to allow multiple signature styles - removed auto font resizing in canvas - divided styles to multiple files

--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 <body>
   <div id="beauty">
     <form name="signature">
-      <label>Name here to create a fantastic ass signature:</label>
+      <label>~ Name here to create a fant-ass-tic signature ~</label>
       <input name='name' placeholder="I am neu-d" />
+      <label>~ Pick your awesome style ~</label>
+      <div id='dropdown' data-menu='false'>
+        <button>Billion Reach</button>
+        <div>
+          <div>Billion Reach</div>
+          <div>Bridgeth</div>
+          <div>Fancy Delight</div>
+        </div>
+      </div>
     </form>
-
     <canvas></canvas>
     <button onclick="convertToImage()">Download</button>
   </div>
-  <script src='index.js'></script>
+  <script src='index.js' type="module"></script>
 </body>
 </html>
